# vsgAtmosphere

./: CMakeLists.txt  LICENSE  README.md
examples/vsgatmosphere/: CMakeLists.txt  vsgatmosphere.cpp
include/vsgAtmosphere/: AtmoshpereConstants.h  AtmoshpereConstatnts.h  Atmosphere.h  AtmosphereBinding.h  AtmosphereImage.h  AtmosphereLighting.h  AtmosphereRuntime.h  AtmosphereTools.h  AtmosphereTrackball.h  BRDF.h  Clouds.h  InverseMatrices.h  Task.h
shaders/scattering/: cloud_map.glsl  clouds.glsl  compute_BRDF.glsl  compute_detail_noise_cs.glsl  compute_direct_irradiance_cs.glsl  compute_indirect_irradiance_cs.glsl  compute_multiple_scattering_cs.glsl  compute_scattering_density_cs.glsl  compute_shape_noise_cs.glsl  compute_single_scattering_cs.glsl  compute_transmittance_cs.glsl  compute_uniforms.glsl  constants.glsl  cubemap_fs.glsl  cubemap_vs.glsl  debug_constants.glsl  functions.glsl  pbr_fs.glsl  phong_fs.glsl  prefilter.glsl  reflection_map.glsl  rendering_constants.glsl  rendering_data.glsl  sky_fs.glsl  sky_vs.glsl  transmittance.glsl
src/: Atmosphere.cpp  AtmosphereBinding.cpp  AtmosphereImage.cpp  AtmosphereLighting.cpp  AtmosphereRuntime.cpp  AtmosphereTrackball.cpp  BRDF.cpp  CMakeLists.txt  Clouds.cpp  Task.cpp
textures/scattering/: weather.vsgb
